--- a/tests/triggers.html
+++ b/tests/triggers.html
@@ -7,6 +7,7 @@
 <script src='../lib/jquery-ui/ui/jquery-ui.js'></script>
 <script src='../build/out/fullcalendar.js'></script>
 <script src='../build/out/gcal.js'></script>
+<script src='../lib/jquery-simulate/jquery.simulate.js'></script>
 <script>
 
 	/*
