added more options tests

--- a/tests/base.html
+++ b/tests/base.html
@@ -12,7 +12,8 @@
 <link href="base.css" rel="stylesheet">
 <script>
 	$(document).ready(function() {
-		$('#calendar').fullCalendar({editable:true});
+		$('#calendar').css("width",800);
+		$('#calendar').fullCalendar({editable:true,weekNumbers:true});
 	});	
 </script>
 </head>
